[package]
authors = ["杨国栋 <854252262@qq.com>"]
description = "vue sfc apis for rust"
# documentation = "https://rustdoc.swc.rs/sfc/"
edition = "2021"
name = "sfc"
repository = "https://github.com/SKT1yang/vue-sfc"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[dependencies]
sfc_ast = { path = "../sfc_ast" }
sfc_codegen = { path = "../sfc_codegen" }
sfc_parser = { path = "../sfc_parser" }
sfc_visit = { path = "../sfc_visit" }
